test/Vehicle/Test/CompileMode/Error/ParsingErrors/invalidAnnotationParameter.vcl
@parameter(valid=False)
epsilon : Rat